# TroubleshootingServer

./: Astar.h  BFS.h  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  CommonSearcher.h  DFS.h  DFS1.h  FIleCacheManager.h  MatrixMySearch.cpp  MatrixMySearch.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Point.h  README.md  SearchSolver.h  Searchable.h  Searcher.h  Server.h  Solver.h  State.h  StringReverser.cpp  StringReverser.h  main.cpp
